# ourosss

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  OUROBOROS.md  PROJECTS.md  RALPH.md  README.md  env.example  pyproject.toml
.claude/: settings.json
.claude/commands/: feature.md  project-page.md  vitals.md
.claude/hooks/: check-auto-dev.sh
.github/: rtk-badge.json
.github/ISSUE_TEMPLATE/: bug-report.yml  rfc.yml
.github/workflows/: auto-dev.yml  checkpoint-alert.yml  lint.yml  pipeline.yml  rtk-badge.yml  stale.yml  training-watch.yml
artifacts/qr-mosaic/qr_mosaic/: cli.py  mosaic.py
artifacts/qr-mosaic/tests/: test_cli.py
bot/: main.py
bot/handlers/: ckpt.py  completions.py  crashlog.py  disk.py  eval.py  feature.py  logs.py  metrics.py  page.py  qr.py  research.py  run.py  stop.py  sync.py  vitals.py
bot/services/: config.py  disk_state.py  notion.py  page.py  vitals.py
bot/services/completions/: __init__.py  charts.py  formatting.py  parse.py  remote_script.py
infra/: .gitignore  README.md  USAGE.md  bootstrap.sh
infra/claude/: settings.json
infra/claude/skills/: README.md
infra/claude/skills/agent-dashboard/: SKILL.md  dashboard.py
infra/claude/skills/agent-mail/: SKILL.md
infra/claude/skills/check-ckpt/: SKILL.md
infra/claude/skills/check-disk/: SKILL.md
infra/claude/skills/check-gpu/: SKILL.md
infra/claude/skills/check-training/: SKILL.md
infra/claude/skills/compare-runs/: SKILL.md
infra/claude/skills/completions/: SKILL.md
infra/claude/skills/deep-research/: SKILL.md
infra/claude/skills/label-dataset/: SKILL.md
infra/claude/skills/remote-exec/: SKILL.md
infra/claude/skills/research-log/: SKILL.md
infra/claude/skills/sync-results/: SKILL.md
infra/hermes/: config.yaml  skills-snapshot.yaml
infra/hermes/memories/: USER.md
infra/local/: com.ourosss.hermes-sync.plist  restore-claude-skills.sh  sync-push.sh
infra/server/: README.md  bootstrap-python.sh  bootstrap-server.sh  claude-profile.sh  common.sh  ourosss-run.sh  ourosss-sync.service  ourosss-sync.timer  ourosss.service  profile-exec.sh  sync-pull.sh
scripts/: auto-dev.sh  heartbeat_monitor.py  run-bot.sh  sync-ablations.sh
scripts/telegram/: README.md  archive-batch.py  folders.example.yaml  organize.py
skills/compare-runs/: SKILL.md
skills/research-status/: SKILL.md
skills/review-paper/: SKILL.md
team/: README.md
team/tasks/: .template.yaml  019-stale-bot.yaml  020-rfc-template.yaml
