[project]
name = "ouroboros"
version = "7.0.0"
description = "Research governance protocol — Telegram bot, multi-agent orchestration, CI/CD"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "python-dotenv>=1.0",
    "notion-client>=2.0",
    "Pillow>=10.0",
    "Telethon>=1.36",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

# Entry point: `uv run ouroboros` starts the bot
[project.scripts]
ouroboros = "bot.main:main"

# PEP 735 dependency groups (uv-native, replaces optional-dependencies)
[dependency-groups]
dev = ["pre-commit>=3.0", "ruff>=0.9"]
scripts = ["telethon>=1.36"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.uv]
# Compile bytecode for faster startup
compile-bytecode = true
# Default groups to install with `uv sync`
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"bot/handlers/completions.py" = ["E501"]
